[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/UI/pause/MainPauseTab.gd" type="Script" id=1]
[ext_resource path="res://assets/theme.tres" type="Theme" id=2]
[ext_resource path="res://src/UI/base/MenuButton.tscn" type="PackedScene" id=3]

[node name="MainPauseTab" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 32.0
margin_top = 32.0
margin_right = 1248.0
margin_bottom = 688.0
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_left = 531.0
margin_right = 685.0
margin_bottom = 47.0
size_flags_horizontal = 4
text = "GAME IS PAUSED"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_left = 518.0
margin_top = 63.0
margin_right = 698.0
margin_bottom = 504.0
size_flags_horizontal = 4
size_flags_vertical = 3
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" parent="VBoxContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 114.0
margin_right = 180.0
margin_bottom = 174.0
text = "Resume"

[node name="RestartButton" parent="VBoxContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 190.0
margin_right = 180.0
margin_bottom = 250.0
text = "Restart"

[node name="SettingsButton" parent="VBoxContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 266.0
margin_right = 180.0
margin_bottom = 326.0
text = "Settings"

[node name="ReturnButton" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_left = 518.0
margin_top = 520.0
margin_right = 698.0
margin_bottom = 580.0
text = "Menu"

[node name="QuitButton" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_left = 518.0
margin_top = 596.0
margin_right = 698.0
margin_bottom = 656.0
text = "Quit"
